<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:overScrollMode="always"
    android:scrollbars="vertical"
    tools:context=".MainActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="320dp"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical"
        >

        <ImageView
            android:layout_width="150dp"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:src="@drawable/paperplane"
            android:contentDescription="@string/todo" />

        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/otp_verification"
            android:layout_gravity="center"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_marginTop="10dp"
            android:textSize="24dp"
            tools:ignore="SpUsage" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/one_time_password_send_on_your_mobile_no"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"
            android:textSize="18sp"
       />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:text="@string/enter_your_mobile_no"
            android:textStyle="bold"
            android:textSize="20sp"

            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_marginTop="10dp">

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:importantForAutofill="no"
                android:inputType="number"
                android:minWidth="48dp"
                android:minHeight="48dp"
                android:text="@string/_91"
                tools:ignore="LabelFor,TouchTargetSizeCheck,TouchTargetSizeCheck" />

            <EditText
                android:id="@+id/enterno"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:hint="@string/_0000000000"
                android:importantForAutofill="no"
                android:inputType="phone"
                tools:ignore="LabelFor,TouchTargetSizeCheck,TextContrastCheck" />
        </LinearLayout>
<FrameLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"    >

    <Button
        android:id="@+id/getotp"
        android:layout_width="220dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:text="@string/get_otp"
        tools:ignore="TouchTargetSizeCheck,TouchTargetSizeCheck" />
    <ProgressBar
        android:id="@+id/progressbar"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_gravity="center"
        android:visibility="gone"
        />

    </FrameLayout>
    </LinearLayout>
</ScrollView>